added new editing options by stef to the menu; tiny ac_shine fix; changelog
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4224 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -39,6 +39,8 @@ CLIENT SIDE:
  - Server browser now shows modded servers (those with 'negative' protocols) as mods.
  - Map editors: A menu to test skymaps.
  - "menuinitselection" added for scripters.
+ - Map editors: "entstats" will print entity statistics to the console.
+ - Map editors: "showmodelclipping" shows the full clipping of all models in the map.
  - 
 
 
