updated header-information of i18n templates
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5364 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/locale/AC.pot
+++ b/ac/source/locale/AC.pot
@@ -1,12 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# AssaultCube i18n TEMPLATE
+# Copyright (C) 2010 RabidViper Productions
+# This file is distributed under the same license as the AssaultCube package.
+# flowtron <team@assault.cubers.net>, 2010.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: AC-1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-07-13 19:14+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
